Draft of theory notes for admm finished.

--- a/presentations/inv_dev_plan_dec-2011/defs.tex
+++ b/presentations/inv_dev_plan_dec-2011/defs.tex
@@ -5,8 +5,8 @@
 \newcommand{\EEAS}{\end{eqnarray}}
 % \newcommand{\BEAS}{\begin{IEEEeqnarray}{rl}}
 % \newcommand{\EEAS}{\end{IEEEeqnarray}}
-\newcommand{\BEA}{\begin{subequations}\begin{align}}
-\newcommand{\EEA}{\end{align}\end{subequations}}
+\newcommand{\BSA}{\begin{subequations}\begin{align}}
+\newcommand{\ESA}{\end{align}\end{subequations}}
 \newcommand{\BEQ}{\begin{equation}}
 \newcommand{\EEQ}{\end{equation}}
 \newcommand{\BIT}{\begin{itemize}}
